# ImageProtect_Android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/bying/imageprotect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bying_imageprotect_base_JNIOpencv.h  native-lib.cpp
app/src/main/java/bying/imageprotect/: MainActivity.java
app/src/main/java/bying/imageprotect/activity/: AboutActivity.java  DownloadActivity.java  FriendsActivity.java  LoginActivity.java  MainActivity.java  RegisterActivity.java  SearchActivity.java  SetActivity.java  ShareActivity.java  SplashActivity.java
app/src/main/java/bying/imageprotect/adapter/: LeftMenuAdapter.java
app/src/main/java/bying/imageprotect/base/: BaseActivity.java  FaceDetectorBase.java  JNIBase.java  JNIOpencv.java  LeftMenuBaseActivity.java
app/src/main/java/bying/imageprotect/cipher_example/: AES.java  Base64.java  RSA.java
app/src/main/java/bying/imageprotect/ui/: AboutActivity.java  DownloadActivity.java  FriendsActivity.java  LoginActivity.java  MainActivity.java  RegisterActivity.java  SearchActivity.java  SetActivity.java  ShareActivity.java  SplashActivity.java
app/src/main/java/bying/imageprotect/util/: AES256Util.java  Base64Util.java  BytesToHex.java  ImageUtil.java  RSAUtil.java
app/src/main/java/helper/: SQLiteHandler.java
app/src/main/java/volley/: Config_URL.java
app/src/main/res/drawable/: left_simple_item_selector.xml  shape01.xml  shapesolid01.xml
app/src/main/res/layout/: activity_about.xml  activity_download.xml  activity_friends.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_search.xml  activity_set.xml  activity_share.xml  activity_splash.xml  base_navigation.xml  base_slide.xml  custom_drawerlayout.xml  headlayout.xml
app/src/main/res/menu/: left_menu.xml  menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/bying/imageprotect/: ExampleUnitTest.java
openCVLibrary2411/: build.gradle
openCVLibrary2411/src/main/java/org/opencv/features2d/: DescriptorExtractor.java  FeatureDetector.java
sample/: build.gradle
sample/src/androidTest/java/bying/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/bying/sample/: L.java  MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/test/java/bying/sample/: ExampleUnitTest.java
